# DeepCoder-device-management

./: README.md
data_handling/: .gitignore  converter.py  json_to_xml.py  test_DH.py  xml_to_json.py
data_handling/testcases/: j1.sh  j2.sh  j3.sh  j4.sh  j5.sh  test_cases.txt  test_one.sh  x1.sh  x2.sh  x3.sh  x4.sh  x5.sh
data_handling/testcases/json-xml/: test1.txt  test2.txt  test3.json  test3.txt  test4.txt  test5.txt
data_handling/testcases/xml-json/: test1.txt  test1.xml  test2.txt  test2.xml  test3.txt  test4.txt  test4.xml  test5.txt  test5.xml
deepcoder/: .gitignore
deepcoder/dataset/: dataset_rest-func.json
deepcoder/dslCode/: classifyDate.txt  classifyID.txt  classifyLoc.txt  classifyType.txt
deepcoder/examples/: README.md  classifyDate.json  classifyID.json  classifyLoc.json  classifyType.json
deepcoder/include/: device_manager.h
deepcoder/include/dsl/: ast.h  programloader.h  utils.h
deepcoder/lib/: device_manager.cc  example-generator.cc
deepcoder/lib/dsl/: ast.cc  interpreter.cc  programloader.cc  type.cc  utils.cc
deepcoder/python/: model.py
deepcoder/scripts/: gen_program_timed.sh
deepcoder/src/: CMakeLists.txt  DM_cmd.cc  evaluate_program.cc  generate_dataset.cc  test_DM.cc
lib/: find-program.cc
protocol_adapter/: adapter_list.py  coap_adapter.py  coap_server.py  main.py  mqtt_adapter.py
protocol_adapter/tests/: rank1c.sh  rank1m.sh  rank_1_coap.py  rank_1_mqtt.py
python/: model.py
scripts/: test_model.sh
src/: generate_testdata.cc
